--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: app
   datasource:
-    url: jdbc:h2:mem:dbapp
+    url: jdbc:h2:mem:test
     driver-class-name: org.h2.Driver
     username: sa
-    password:
+    password: sa
   h2:
     console:
       enabled: true
