--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,10 @@ spring:
     console:
       enabled: true
       path: /h2-console
+api:
+  security:
+    # https://kubernetes.io/docs/concepts/configuration/secret/
+    apiVersion: v1
+    kind: Secret
+    metadata:
+      name: mysecre
