--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,20 @@ spring:
   application:
     name: app
   datasource:
-    url: jdbc:h2:mem:test
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: sa
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    url: jdbc:oracle:thin:@oracle.fiap.com.br:1521/ORCL
+    username: RM99615
+    password: 260105
+    driver-class-name: oracle.jdbc.OracleDriver
+  jpa:
+    show-sql: true
+  flyway:
+    url: jdbc:oracle:thin:@oracle.fiap.com.br:1521/ORCL
+    user: RM99615
+    password: 260105
+    locations: db/migration/
+    enabled: true
+    baseline-on-migrate: true
+
 api:
   security:
     secret: sa-secret
