--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation  'org.springframework.amqp:spring-rabbit'
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'at.favre.lib:bcrypt:0.10.2'
     implementation 'org.flywaydb:flyway-core'
